--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,118 @@
     padding: 0px;
     box-sizing: border-box;
 }
-
-ul, ol {
-    list-style: none;
-}
 /* #endregion RESET */
+
+/* #region GENERAL */
+:root{
+    --header-h: 70px
+}
+
+body{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+/* #endregion GENERAL */
+
+/* #region HEADER */
+header{
+    height: var(--header-h);
+    background-color: red;
+    padding: 15px;
+    color: white;
+    box-shadow: 0px 0px 5px 1px #000000;
+}
+/* #endregion HEADER */
+
+/* #region MAIN */
+main{
+    height: calc(100vh - var(--header-h));
+    min-height: 300px;
+    position: relative;
+    overflow-y: auto;
+}
+
+.box{
+    min-width: 500px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px 1px #000000;
+    padding: 20px 15px;
+    background-color: red;
+    color: white;
+    & h2{
+        margin-bottom: 20px;
+    }
+    & * + *{
+        margin-top: 10px;
+    }
+}
+
+[class*="btn"]{
+    padding: 5px;
+    border-radius: 5px;
+    background-color: white;
+    &:active{
+        box-shadow: inset 0px 0px 6px 1px rgba(0, 0, 0, 0.359) ;
+    }
+}
+
+.info{
+    position: relative;
+}
+
+.info-box{
+    background-color: white;
+    width: 200px;
+    color: black;
+    padding: 10px;
+    border: 1px solid black;
+    position: absolute;
+    top: 0;
+    text-align: left;
+    & li{
+        list-style-position: inside;
+    }
+}
+
+.display-none{
+    display: none;
+}
+
+label{
+    font-size: 1.3rem;
+}
+
+#ticket{
+    background-color: white;
+    color: #000000;
+    padding: 10px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    & :first-child{
+        width: 100%;
+        text-align: center;
+    }
+}
+
+
+/* #endregion MAIN */
+
+@media screen and (min-width: 700px) {
+    .info-box{
+        left: 50%;
+    }
+
+}
+
+@media screen and (max-width: 699px){
+    .info-box{
+        right: 50%;
+    }
+
+}
+
